# parsigs

./: .gitignore  LICENSE  README.md  __init__.py  contributing.md  parse_sig_api.py  playground.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: starter-workflow.yaml
data/: drug_names.txt
parsigs/: GenericDrugInformation.py  frequency_mapping.json  generic.py  image_to_text.py  latin_frequency.json  parse_sig_api.py  sig_terms_stemmer.py
parsigs/resources/: drug_names.txt  latin_frequency.json
research/: README.md  dosage_instructions_ner.ipynb  dosage_instructions_ner_bert.ipynb  first_draft.ipynb  parse_sig.py  pre_process_data.py
research/config/: config.cfg  config_bert.cfg  config_compact_bert.cfg
research/example_model/model-best/: meta.json
research/example_model/model-best/ner/: model  moves
research/example_model/model-best/tok2vec/: model
research/example_model/model-last/: config.cfg  meta.json
research/example_model/model-last/ner/: model  moves
research/example_model/model-last/tok2vec/: model
research/example_model2/model-best/: config.cfg
research/example_model2/model-best/ner/: model
research/example_model2/model-best/tok2vec/: model
research/example_model2/model-last/: config.cfg
research/first_model/model-last/: config.cfg
research/sig_ner_model/model-best/: meta.json
research/sig_ner_model/model-best/ner/: model  moves
research/sig_ner_model/model-best/tok2vec/: model
research/sig_ner_model/model-last/: config.cfg
research/sig_ner_model/model-last/ner/: model  moves
research/sig_ner_model/model-last/tok2vec/: model
research/sig_ner_model/model-last/vocab/: strings.json
src/: parse_sig_api.py
test/: parse_sig_tests.py  test_parsig_api.py
tests/: test_hypothesis.py  test_inflect.py  test_parsig_api.py  test_properties_parsig_api.py  test_propery_parsig_api.py  test_stemmer.py
