[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsigs"
version = "0.0.6_beta"
authors = [
    { name = "Roy Ashcenazi", email = "royashcenazi@gmail.com" },
]
description = "The private, smart and easy Sig (Dosage Instructions) text-parser"
readme = "README.md"

dependencies = [
    "spacy>=3.0,<4.0",
    "word2number",
    "inflect",
    "en-parsigs @ https://huggingface.co/royashcenazi/en_parsigs/resolve/main/en_parsigs-any-py3-none-any.whl",
    "pyspellchecker<= 0.5.5",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
]

[tool.hatch.metadata]
allow-direct-references = true
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/royashcenazi/parsigs"
"Bug Tracker" = "https://github.com/royashcenazi/parsigs/issues"

[tool.ruff]
src = ["src", "tests"]
target-version = "py37"
select = [
    "A",    #  builtins
    "ARG",  #  unsued arguments
    "B",    #  bugbear
    "C4",   #  comprehensions
    "C90",  #  mccabe
    "COM",  #  commas
    "E",    #  pycodestyle
    "F",    #  pyflakes
    "I",    #  isort
    "N",    #  pep8-naming
    "PT",   #  pytest style
    "RUF",  #  ruff
    "SIM",  #  simplify
    "TID",  #  tidy imports
    "UP",   #  pyupgrade
    "W",    #  warnings
]

[tool.ruff.mccabe]
max-complexity = 8

[tool.ruff.isort]
force-single-line = true
